# AMM_Bot

./: README.md
moveit_setup/: .setup_assistant  CMakeLists.txt  package.xml
moveit_setup/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  rover.ros2_control.xacro  rover.srdf  rover.urdf.xacro
moveit_setup/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
rover_bot/: CMakeLists.txt  README.md  package.xml
rover_bot/config/: bridge.yaml  joystick.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml
rover_bot/description/: create_link.xacro  rover.urdf.xacro  rover_control.xacro  rover_desc.xacro  rover_gazebo.xacro  rover_sensor.xacro
rover_bot/launch/: cont_joystick.launch.py  cont_keyboard.launch.py  localisation.launch.py  moveit.launch.py  navigation.launch.py  sim_gazebo.launch.py  slam_launch.launch.py  view_rviz.launch.py  world.launch.py
rover_bot/maps/: map_save0.pgm  map_save0.yaml
rover_bot/meshes/visual/: link_2.dae
rover_bot/rviz/: sim_model.rviz  view_launch.rviz
rover_bot/scripts/: gripper.py
rover_bot/worlds/: final_world.sdf
